src/objects/Potential_Defect__c.object
<CustomObject>
    <description>Potential Defect ticket object.  Ticket record types include Potential Defects and Enhancement tickets.</description>
    <fields>
        <fullName>Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defect accepted</description>
        <label>Accepted - Create Defect</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Enhancements</relationshipLabel>
        <relationshipName>Potential_Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Anticipated_Delivery_Date__c</fullName>
        <label>Anticipated Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Area_Path__c</fullName>
        <description>Translates to the TFS Project field</description>
        <label>TFS Project</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>TFS_Collection__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>CAD-Mobile</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Common</fullName>
                </value>
                <value>
                    <fullName>CustomInterface</fullName>
                </value>
                <value>
                    <fullName>Dispatch</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>EMSBilling</fullName>
                </value>
                <value>
                    <fullName>EMSCAD</fullName>
                </value>
                <value>
                    <fullName>EMS Transport</fullName>
                </value>
                <value>
                    <fullName>Engineering</fullName>
                </value>
                <value>
                    <fullName>ePCR</fullName>
                </value>
                <value>
                    <fullName>Evolution</fullName>
                </value>
                <value>
                    <fullName>Fire Records</fullName>
                </value>
                <value>
                    <fullName>GISLink</fullName>
                </value>
                <value>
                    <fullName>Inform 5</fullName>
                </value>
                <value>
                    <fullName>Inform 911</fullName>
                </value>
                <value>
                    <fullName>InformCAD911</fullName>
                </value>
                <value>
                    <fullName>Inform-Fire</fullName>
                </value>
                <value>
                    <fullName>Inform-Jail</fullName>
                </value>
                <value>
                    <fullName>Inform-RMS</fullName>
                </value>
                <value>
                    <fullName>Inform-RMSWeb</fullName>
                </value>
                <value>
                    <fullName>IntegratedSolutions</fullName>
                </value>
                <value>
                    <fullName>Investigative</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Platform</fullName>
                </value>
                <value>
                    <fullName>Police Records</fullName>
                </value>
                <value>
                    <fullName>Product Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billable_Hours__c</fullName>
        <label>Billable Hours</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Black_Box_Collected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Black Box Collected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Blitz__c</fullName>
        <label>Blitz</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Room 1</fullName>
                </value>
                <value>
                    <fullName>Room 2</fullName>
                </value>
                <value>
                    <fullName>Room 3</fullName>
                </value>
                <value>
                    <fullName>Room 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCB_Notes__c</fullName>
        <label>CCB Notes</label>
        <length>15000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Email__c</fullName>
        <label>Case Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enhancements</relationshipLabel>
        <relationshipName>Potential_Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CustomerLookup__c</fullName>
        <formula>Original_Customer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CustomerLookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerNumberLookup__c</fullName>
        <formula>Original_Service_Contract__r.Customer_Number_WMP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Customer number of originating client&apos;s CS ticket, if applicable.</inlineHelpText>
        <label>Customer Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact_Date_Time__c</fullName>
        <label>Customer Contact Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Priority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
                <value>
                    <fullName>P5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Defect_Close_Date__c</fullName>
        <label>Defect Close Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Defect_Ticket_ID__c</fullName>
        <displayFormat>Def-{000000}</displayFormat>
        <externalId>true</externalId>
        <label>Defect Ticket ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Defect_Ticket_Long_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Defect Ticket Long ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dummyrecordtouchfield__c</fullName>
        <label>Dummyrecordtouchfield</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment_Type__c</fullName>
        <label>Environment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disaster</fullName>
                </value>
                <value>
                    <fullName>DOLF</fullName>
                </value>
                <value>
                    <fullName>Pre Go-live Production</fullName>
                </value>
                <value>
                    <fullName>Pre-Release</fullName>
                </value>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Reporting/WWH</fullName>
                </value>
                <value>
                    <fullName>Test</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fixed_in_Build__c</fullName>
        <description>Changed to &quot;Fixed in Version&quot; per Mark Baena 3/7/12</description>
        <label>Fixed in Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Found_in_Build__c</fullName>
        <description>Label changed to &quot;Recreated in Version&quot; per Mark Baena 3/7/12</description>
        <inlineHelpText>If unknown, please enter X.X.X.x</inlineHelpText>
        <label>Recreated in Version</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Steps_to_Recreate_Issue__c</fullName>
        <label>Internal Steps to Recreate Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Known_Issues_Description__c</fullName>
        <label>Known Issues Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Legacy_Defect_Ticket_Number__c</fullName>
        <label>Legacy Defect Ticket Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MOL_Score__c</fullName>
        <label>MOL Score</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Occurred_After_Upgrade__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Occurred After Upgrade</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Occurrence__c</fullName>
        <description>MOL Use Only: Ticket &gt; Defect &gt; TFS</description>
        <inlineHelpText>MOL Use Only</inlineHelpText>
        <label>Occurrence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Always</fullName>
                </value>
                <value>
                    <fullName>2 - Frequent</fullName>
                </value>
                <value>
                    <fullName>3 - Occasional</fullName>
                </value>
                <value>
                    <fullName>4 - Remote</fullName>
                </value>
                <value>
                    <fullName>5 - Improbable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Potential Defects</relationshipLabel>
        <relationshipName>Potential_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Potential Defects</relationshipLabel>
        <relationshipName>Potential_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Potential Defects</relationshipLabel>
        <relationshipName>Potential_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Patch_Release_Branch__c</fullName>
        <inlineHelpText>Specify which release branch the patch will be implemented in</inlineHelpText>
        <label>Patch Release Branch</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Patch_Status_Comments__c</fullName>
        <inlineHelpText>Enter engineering’s assessment of patchability, technical risk, effort estimate, etc.</inlineHelpText>
        <label>Patch Status Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Patch_Status__c</fullName>
        <description>Internal process for determing validity of patch requests and processing.</description>
        <label>Patch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Pending Decision to Assess</fullName>
                </value>
                <value>
                    <fullName>Assess for Patch</fullName>
                </value>
                <value>
                    <fullName>Pending Decision to Patch</fullName>
                </value>
                <value>
                    <fullName>Patch Rejected</fullName>
                </value>
                <value>
                    <fullName>Patch Approved</fullName>
                </value>
                <value>
                    <fullName>Patch Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Planned_Release__c</fullName>
        <label>Planned Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PotentialDefectURL__c</fullName>
        <formula>LEFT( $Api.Partner_Server_URL_230 , FIND(&apos;services/Soap/c/23.0&apos;, $Api.Enterprise_Server_URL_230) -1) &amp;   Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Potential Defect URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>text( Product__r.Family )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group_1__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DN CAD/Mobile</fullName>
                </value>
                <value>
                    <fullName>GIS - Analytics</fullName>
                </value>
                <value>
                    <fullName>Inform 911</fullName>
                </value>
                <value>
                    <fullName>Inform CAD-Mobile</fullName>
                </value>
                <value>
                    <fullName>Inform RMS-IQ</fullName>
                </value>
                <value>
                    <fullName>Legacy Tiburon</fullName>
                </value>
                <value>
                    <fullName>Perform</fullName>
                </value>
                <value>
                    <fullName>Respond</fullName>
                </value>
                <value>
                    <fullName>TC CAD/Mobile</fullName>
                </value>
                <value>
                    <fullName>TC RMS</fullName>
                </value>
                <value>
                    <fullName>TE RMS</fullName>
                </value>
                <value>
                    <fullName>Vision</fullName>
                </value>
                <value>
                    <fullName>Zuercher</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Sub_Module__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Sub-Module</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Product_Sub_Module__c.Product__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product_Sub_Module__c</referenceTo>
        <relationshipLabel>Potential Defects</relationshipLabel>
        <relationshipName>Potential_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>text( Product__r.Product_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Products must be an active support product to be added to a defect</errorMessage>
            <filterItems>
                <field>Product2.Supportable__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>Product2.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Potential Defects</relationshipLabel>
        <relationshipName>Potential_Defects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Public_Notes__c</fullName>
        <label>Public Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ROID__c</fullName>
        <label>ROID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Defect rejected - initiate the workflow to change status to &quot;Rejected&quot;</description>
        <label>Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Released_In__c</fullName>
        <label>Released In</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Reported_Major_Version__c</fullName>
        <label>Reported Major Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1.1</fullName>
                </value>
                <value>
                    <fullName>1.2</fullName>
                </value>
                <value>
                    <fullName>1.3</fullName>
                </value>
                <value>
                    <fullName>1.8</fullName>
                </value>
                <value>
                    <fullName>1.8 SP1</fullName>
                </value>
                <value>
                    <fullName>1.9 SP1</fullName>
                </value>
                <value>
                    <fullName>2.0</fullName>
                </value>
                <value>
                    <fullName>2.0 SP1</fullName>
                </value>
                <value>
                    <fullName>2.1</fullName>
                </value>
                <value>
                    <fullName>2.1 SP1</fullName>
                </value>
                <value>
                    <fullName>2.1 SP2</fullName>
                </value>
                <value>
                    <fullName>2.1 SP3</fullName>
                </value>
                <value>
                    <fullName>3.0</fullName>
                </value>
                <value>
                    <fullName>3.1</fullName>
                </value>
                <value>
                    <fullName>3.2</fullName>
                </value>
                <value>
                    <fullName>3.3</fullName>
                </value>
                <value>
                    <fullName>3.3 SP3</fullName>
                </value>
                <value>
                    <fullName>3.4</fullName>
                </value>
                <value>
                    <fullName>3.4 SP1</fullName>
                </value>
                <value>
                    <fullName>3.4 SP2</fullName>
                </value>
                <value>
                    <fullName>3.4 SP3</fullName>
                </value>
                <value>
                    <fullName>3.4 SP4</fullName>
                </value>
                <value>
                    <fullName>3.4 SP5</fullName>
                </value>
                <value>
                    <fullName>3.4 SP6</fullName>
                </value>
                <value>
                    <fullName>3.4 SP7</fullName>
                </value>
                <value>
                    <fullName>3.4 SP8</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>3.5 SP1</fullName>
                </value>
                <value>
                    <fullName>3.5 SP10</fullName>
                </value>
                <value>
                    <fullName>3.5 SP11</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reported_Minor_Version__c</fullName>
        <label>Reported Minor Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reported_Patch__c</fullName>
        <label>Reported Patch</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reproducible__c</fullName>
        <label>Reproducible</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In-House - Consistent</fullName>
                </value>
                <value>
                    <fullName>In-House - Intermittent</fullName>
                </value>
                <value>
                    <fullName>On-Site - Consistent</fullName>
                </value>
                <value>
                    <fullName>On-Site - Intermitttent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resolution_Notes__c</fullName>
        <label>Resolution Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>ServiceContract.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Account_Name__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipLabel>Enhancements</relationshipLabel>
        <relationshipName>Potential_Defects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <description>MOL Use Only: Ticket &gt; Defect &gt; TFS</description>
        <inlineHelpText>MOL Use Only</inlineHelpText>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 - Severe</fullName>
                </value>
                <value>
                    <fullName>2 - Critical</fullName>
                </value>
                <value>
                    <fullName>3 - Non-critical / Annoying</fullName>
                </value>
                <value>
                    <fullName>4 - Inconvenience / Cosmetic</fullName>
                </value>
                <value>
                    <fullName>5 - Enhancement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Short_Issue_Summary__c</fullName>
        <label>Short Issue Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Steps_to_Recreate_Issue__c</fullName>
        <label>Client Steps to Recreate Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Support_Ticket_Owner_Email__c</fullName>
        <label>Support Ticket Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TFS_Area_Path__c</fullName>
        <label>TFS Area Path</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Area_Path__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Administrative</fullName>
                </value>
                <value>
                    <fullName>CADMobile</fullName>
                </value>
                <value>
                    <fullName>Chat</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Common</fullName>
                </value>
                <value>
                    <fullName>Dispatch</fullName>
                </value>
                <value>
                    <fullName>EMS Transport</fullName>
                </value>
                <value>
                    <fullName>Fire Records</fullName>
                </value>
                <value>
                    <fullName>Identity Management</fullName>
                </value>
                <value>
                    <fullName>Inform-CAD911\911</fullName>
                </value>
                <value>
                    <fullName>Inform-CAD911\Browser</fullName>
                </value>
                <value>
                    <fullName>Inform-CAD911\CAD</fullName>
                </value>
                <value>
                    <fullName>Inform-CAD911\Common</fullName>
                </value>
                <value>
                    <fullName>Inform-CAD911\GIS</fullName>
                </value>
                <value>
                    <fullName>Inform-CAD911\Interfaces\Custom</fullName>
                </value>
                <value>
                    <fullName>Inform-CAD911\Interfaces\Standard</fullName>
                </value>
                <value>
                    <fullName>Inform-CAD911\Mobile</fullName>
                </value>
                <value>
                    <fullName>Investigative</fullName>
                </value>
                <value>
                    <fullName>Jail</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>Police Records</fullName>
                </value>
                <value>
                    <fullName>Quest</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Repository</fullName>
                </value>
                <value>
                    <fullName>Support Software Solutions\Backlog\RMS\PropertyRoom</fullName>
                </value>
                <value>
                    <fullName>Support Software Solutions\Backlog\RMS\TIPS</fullName>
                </value>
                <value>
                    <fullName>Support Software Solutions\Deployment\AddisonTX-7.5.2-UX</fullName>
                </value>
                <value>
                    <fullName>Support Software Solutions\Deployment\AlamedaCA-7.5.1</fullName>
                </value>
                <value>
                    <fullName>Support Software Solutions\Deployment\AlbuquerqueNM-7.9.x</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TFS_Collection__c</fullName>
        <inlineHelpText>Choose a collection, then choose the applicable project</inlineHelpText>
        <label>TFS Collection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TriTech</fullName>
                </value>
                <value>
                    <fullName>VisionAIR</fullName>
                </value>
                <value>
                    <fullName>EMS</fullName>
                </value>
                <value>
                    <fullName>IMC</fullName>
                </value>
                <value>
                    <fullName>Inform</fullName>
                </value>
                <value>
                    <fullName>VisiNet</fullName>
                </value>
                <value>
                    <fullName>Sandbox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TFS_Comments__c</fullName>
        <label>TFS Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TFS_Work_Item__c</fullName>
        <label>TFS Work Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Patch_Release_Date__c</fullName>
        <inlineHelpText>Enter targted date for patch release</inlineHelpText>
        <label>Target Patch Release Date</label>
        <type>Date</type>
    </fields>
</CustomObject>